@@ -15,15 +15,29 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
+import net.minecraft.core.Registry;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ChunkHolder;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.tags.TagKey;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.properties.Property;
 import net.minecraft.world.level.chunk.LevelChunk;
+import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
+import net.minecraft.world.level.levelgen.feature.Feature;
+import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
+import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
+import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.FileReader;
@@ -32,16 +46,20 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 public class RuleManager {
-    public static final ThreadLocal<ResourceLocation> ACTIVE_FEATURE_BIOME = new ThreadLocal<>();
+    public static final ThreadLocal<Deque<ActiveFeatureContext>> ACTIVE_FEATURE_STACK = ThreadLocal.withInitial(ArrayDeque::new);
     public static final ThreadLocal<List<BlockPos>> LIVE_PLACEMENT_QUEUE = new ThreadLocal<>();
     private static final Gson GSON = new GsonBuilder().setLenient().setPrettyPrinting().create();
     private static final Map<Block, Map<String, Property<?>>> PROPERTY_CACHE = new ConcurrentHashMap<>();
+    private static final Map<FeatureConfiguration, ResourceLocation> TRUNK_BLOCK_CACHE = new ConcurrentHashMap<>();
+    private static final ResourceLocation NO_TRUNK_BLOCK = ResourceLocation.withDefaultNamespace("__no_trunk__");
     public static volatile boolean HAS_LIVE_RULES = false;
     public static volatile boolean HAS_AIR_RULES = false;
     public static volatile boolean HAS_RETROGEN_RULES = false;
+    public static volatile boolean HAS_FEATURE_RULES = false;
     public static volatile int RETROGEN_RULES_HASH = 0;
     public static volatile Map<Block, List<ReplacementRule>> RULES_BY_BLOCK = Collections.emptyMap();
 
@@ -71,6 +89,7 @@ public class RuleManager {
         boolean anyLiveRules = false;
         boolean anyAirRules = false;
         boolean anyRetrogenRules = false;
+        boolean anyFeatureRules = false;
         List<ReplacementRule> retrogenRules = new ArrayList<>();
 
         for (ReplacementRule rule : loadedRules) {
@@ -81,14 +100,21 @@ public class RuleManager {
                 retrogenRules.add(rule);
             }
 
-            for (Block b : rule.getInputBlocks()) {
-                blockMap.computeIfAbsent(b, k -> new ArrayList<>()).add(rule);
+            if (rule.features != null && !rule.features.isEmpty()) {
+                anyFeatureRules = true;
+            }
+            if (rule.not != null && rule.not.features != null && !rule.not.features.isEmpty()) {
+                anyFeatureRules = true;
+            }
+
+            for (Block block : rule.getInputBlocks()) {
+                blockMap.computeIfAbsent(block, k -> new ArrayList<>()).add(rule);
 
                 if (rule.shouldRunPlayerBlocks()) {
                     anyLiveRules = true;
                 }
 
-                if (b.defaultBlockState().isAir()) {
+                if (block.defaultBlockState().isAir()) {
                     anyAirRules = true;
                 }
             }
@@ -98,6 +124,7 @@ public class RuleManager {
         HAS_LIVE_RULES = anyLiveRules;
         HAS_AIR_RULES = anyAirRules;
         HAS_RETROGEN_RULES = anyRetrogenRules;
+        HAS_FEATURE_RULES = anyFeatureRules;
         RETROGEN_RULES_HASH = GSON.toJson(retrogenRules).hashCode();
 
         Constants.LOG.info("Loaded {} replacement rules. Live replacement active: {}, Retrogen active: {}", RULES_BY_BLOCK.size(), HAS_LIVE_RULES, HAS_RETROGEN_RULES && ModConfig.get().enableRetrogen);
@@ -138,6 +165,150 @@ public class RuleManager {
         } catch (Exception e) {
             Constants.LOG.error("Error parsing rule file: {}", path, e);
         }
+    }
+
+    private static ResourceLocation extractTrunkOrFoliageBlockId(FeatureConfiguration config) {
+        if (!(config instanceof TreeConfiguration treeConfig)) return null;
+
+        ResourceLocation cached = TRUNK_BLOCK_CACHE.computeIfAbsent(config, cfg -> {
+            try {
+                BlockState state = treeConfig.trunkProvider.getState(RandomSource.create(42L), BlockPos.ZERO);
+                return BuiltInRegistries.BLOCK.getKey(state.getBlock());
+            } catch (Exception ignored) {
+                return NO_TRUNK_BLOCK;
+            }
+        });
+        return cached == NO_TRUNK_BLOCK ? null : cached;
+    }
+
+    public static void pushActivePlacedFeature(PlacedFeature placedFeature, @Nullable LevelAccessor level, @Nullable BlockPos origin) {
+        if (!HAS_FEATURE_RULES || placedFeature == null) return;
+        RegistryAccess registryAccess = level != null ? level.registryAccess() : null;
+
+        ResourceLocation placedFeatureId = null;
+        Holder<PlacedFeature> placedFeatureHolder = null;
+
+        if (registryAccess != null) {
+            var placedFeatureRegistryOpt = registryAccess.registry(Registries.PLACED_FEATURE);
+            if (placedFeatureRegistryOpt.isPresent()) {
+                Registry<PlacedFeature> placedFeatureRegistry = placedFeatureRegistryOpt.get();
+                placedFeatureId = placedFeatureRegistry.getResourceKey(placedFeature).map(ResourceKey::location).orElseGet(() -> placedFeatureRegistry.getKey(placedFeature));
+                if (placedFeatureId != null) {
+                    placedFeatureHolder = placedFeatureRegistry.getHolder(ResourceKey.create(Registries.PLACED_FEATURE, placedFeatureId)).orElse(null);
+                }
+            }
+        }
+
+        Holder<ConfiguredFeature<?, ?>> configuredFeatureHolder = placedFeature.feature();
+        ResourceLocation configuredFeatureId = configuredFeatureHolder.unwrapKey().map(ResourceKey::location).orElse(null);
+
+        Feature<?> featureInstance = configuredFeatureHolder.value().feature();
+        ResourceLocation baseFeatureId = BuiltInRegistries.FEATURE.getKey(featureInstance);
+        Holder<Feature<?>> baseFeatureHolder = baseFeatureId != null ? BuiltInRegistries.FEATURE.getHolder(ResourceKey.create(Registries.FEATURE, baseFeatureId)).orElse(null) : null;
+        ResourceLocation trunkId = extractTrunkOrFoliageBlockId(configuredFeatureHolder.value().config());
+
+        ActiveFeatureContext ctx = new ActiveFeatureContext(
+                placedFeature, placedFeatureId, placedFeatureHolder,
+                configuredFeatureHolder, configuredFeatureId,
+                featureInstance, baseFeatureId, baseFeatureHolder,
+                origin, trunkId
+        );
+        ACTIVE_FEATURE_STACK.get().push(ctx);
+    }
+
+    public static void pushActiveFeature(Feature<?> featureInstance, @Nullable FeatureConfiguration config, @Nullable BlockPos origin) {
+        if (!HAS_FEATURE_RULES || featureInstance == null) return;
+        ResourceLocation baseFeatureId = BuiltInRegistries.FEATURE.getKey(featureInstance);
+        Holder<Feature<?>> baseFeatureHolder = baseFeatureId != null ? BuiltInRegistries.FEATURE.getHolder(ResourceKey.create(Registries.FEATURE, baseFeatureId)).orElse(null) : null;
+        ResourceLocation trunkId = config != null ? extractTrunkOrFoliageBlockId(config) : null;
+
+        ActiveFeatureContext ctx = new ActiveFeatureContext(
+                null, null, null,
+                null, null,
+                featureInstance, baseFeatureId, baseFeatureHolder,
+                origin, trunkId
+        );
+        ACTIVE_FEATURE_STACK.get().push(ctx);
+    }
+
+    public static void popActiveFeature() {
+        Deque<ActiveFeatureContext> stack = ACTIVE_FEATURE_STACK.get();
+        if (!stack.isEmpty()) {
+            stack.pop();
+        }
+    }
+
+    public static boolean matchesFeature(ReplacementRule rule, @Nullable BlockPos currentPos, @Nullable RegistryAccess registryAccess) {
+        if (rule.features == null || rule.features.isEmpty()) return false;
+        Deque<ActiveFeatureContext> stack = ACTIVE_FEATURE_STACK.get();
+        if (stack.isEmpty()) return false;
+
+        int featureRadius = rule.getFeatureRadius();
+        long radiusSq = (long) featureRadius * featureRadius;
+
+        for (ActiveFeatureContext activeFeatureContext : stack) {
+            if (featureRadius > 0 && currentPos != null && activeFeatureContext.origin() != null) {
+                if (currentPos.distSqr(activeFeatureContext.origin()) > radiusSq) {
+                    continue;
+                }
+            }
+
+            for (String featureRequirement : rule.features) {
+                if (featureRequirement == null || featureRequirement.isEmpty()) continue;
+
+                if (featureRequirement.startsWith("#")) {
+                    ResourceLocation tagLocation = ResourceLocation.tryParse(featureRequirement.substring(1));
+                    if (tagLocation != null) {
+                        TagKey<PlacedFeature> placedFeatureTag = TagKey.create(Registries.PLACED_FEATURE, tagLocation);
+                        if (activeFeatureContext.placedFeatureHolder != null && activeFeatureContext.placedFeatureHolder.is(placedFeatureTag)) {
+                            return true;
+                        }
+                        TagKey<ConfiguredFeature<?, ?>> configuredFeatureTag = TagKey.create(Registries.CONFIGURED_FEATURE, tagLocation);
+                        if (activeFeatureContext.configuredFeatureHolder != null && activeFeatureContext.configuredFeatureHolder.is(configuredFeatureTag)) {
+                            return true;
+                        }
+                        TagKey<Feature<?>> featureTag = TagKey.create(Registries.FEATURE, tagLocation);
+                        if (activeFeatureContext.featureHolder != null && activeFeatureContext.featureHolder.is(featureTag)) {
+                            return true;
+                        }
+                    }
+                } else if (featureRequirement.contains("*")) {
+                    Pattern pattern = rule.compiledFeaturePatterns != null ? rule.compiledFeaturePatterns.get(featureRequirement) : null;
+                    if (pattern == null) continue;
+                    if (activeFeatureContext.placedFeatureId != null && pattern.matcher(activeFeatureContext.placedFeatureId.toString()).matches())
+                        return true;
+                    if (activeFeatureContext.configuredFeatureId != null && pattern.matcher(activeFeatureContext.configuredFeatureId.toString()).matches())
+                        return true;
+                    if (activeFeatureContext.featureId != null && pattern.matcher(activeFeatureContext.featureId.toString()).matches())
+                        return true;
+                    if (activeFeatureContext.trunkOrFoliageBlockId != null && pattern.matcher(activeFeatureContext.trunkOrFoliageBlockId.toString()).matches())
+                        return true;
+                } else {
+                    ResourceLocation requirementLocation = ResourceLocation.tryParse(featureRequirement);
+                    if (requirementLocation != null) {
+                        if (activeFeatureContext.placedFeatureId != null && activeFeatureContext.placedFeatureId.equals(requirementLocation))
+                            return true;
+                        if (activeFeatureContext.configuredFeatureId != null && activeFeatureContext.configuredFeatureId.equals(requirementLocation))
+                            return true;
+                        if (activeFeatureContext.featureId != null && activeFeatureContext.featureId.equals(requirementLocation))
+                            return true;
+                        if (activeFeatureContext.trunkOrFoliageBlockId != null && activeFeatureContext.trunkOrFoliageBlockId.equals(requirementLocation))
+                            return true;
+
+                        String path = requirementLocation.getPath();
+                        if (activeFeatureContext.placedFeatureId != null && (activeFeatureContext.placedFeatureId.getPath().equals(path) || activeFeatureContext.placedFeatureId.getPath().contains(path)))
+                            return true;
+                        if (activeFeatureContext.configuredFeatureId != null && (activeFeatureContext.configuredFeatureId.getPath().equals(path) || activeFeatureContext.configuredFeatureId.getPath().contains(path)))
+                            return true;
+                        if (activeFeatureContext.featureId != null && (activeFeatureContext.featureId.getPath().equals(path) || activeFeatureContext.featureId.getPath().contains(path)))
+                            return true;
+                        if (activeFeatureContext.trunkOrFoliageBlockId != null && (activeFeatureContext.trunkOrFoliageBlockId.getPath().equals(path) || activeFeatureContext.trunkOrFoliageBlockId.getPath().contains(path)))
+                            return true;
+                    }
+                }
+            }
+        }
+        return false;
     }
 
     @Nullable
@@ -216,7 +387,7 @@ public class RuleManager {
 
         boolean needsRandom = outputBlocks.size() > 1 || (rule.randomizeProperties != null && !rule.randomizeProperties.isEmpty());
         Random rand = needsRandom ? new Random(pos.asLong()) : null;
-        Block outputBlock = outputBlocks.size() == 1 ? outputBlocks.get(0) : outputBlocks.get(rand.nextInt(outputBlocks.size()));
+        Block outputBlock = outputBlocks.size() == 1 ? outputBlocks.getFirst() : outputBlocks.get(rand.nextInt(outputBlocks.size()));
 
         BlockState newState = outputBlock.defaultBlockState();
 
@@ -362,6 +533,9 @@ public class RuleManager {
                      "structures": [
                        "minecraft:jungle_pyramid"
                      ],
+                     "features": [
+                       "minecraft:ore_diamond_buried"
+                     ],
                 \s
                      "_comment_states": "STATE FILTERS: Only replace if input has these properties",
                      "state_properties": {
@@ -440,5 +614,19 @@ public class RuleManager {
         } catch (Exception e) {
             Constants.LOG.error("Failed to generate swapper rule file", e);
         }
+    }
+
+    public record ActiveFeatureContext(
+            @Nullable PlacedFeature placedFeature,
+            @Nullable ResourceLocation placedFeatureId,
+            @Nullable Holder<PlacedFeature> placedFeatureHolder,
+            @Nullable Holder<ConfiguredFeature<?, ?>> configuredFeatureHolder,
+            @Nullable ResourceLocation configuredFeatureId,
+            @Nullable Feature<?> feature,
+            @Nullable ResourceLocation featureId,
+            @Nullable Holder<Feature<?>> featureHolder,
+            @Nullable BlockPos origin,
+            @Nullable ResourceLocation trunkOrFoliageBlockId
+    ) {
     }
 }
